Wed Dec 18 15:41:21 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltInternals.h: increase the max number of cascaded
	  sort operations.
	* AUTHORS doc/* win32/*: updated Igor's mail and the Web page for
	  the Windows binaries.

Mon Dec 16 19:31:16 CET 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/libxslt.def.src: added more exports for Stephane Bidoul
	
Fri Dec 13 14:50:12 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/apibuild.py doc/libexslt-api.xml doc/libxslt-api.xml: updated
	  the apibuilder script, regenerated the APIs

Fri Dec 13 11:59:07 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: numbering should not traverse XInclude
	  nodes left in the tree. Closes bug #101114 raised by
	  Bernd Kuemmerlen

Thu Dec 12 01:17:09 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/apibuild.py: fixed a bug in merging public info from
	  C modules.
	* win32/Makefile.msvc win32/configure.js: patch from Mark Vakoc
	  the iconv option to configure.js didn't work, and 
	  added zlib option needed when linking xsltproc statically

Wed Dec 11 19:18:45 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am doc/apibuild.py doc/libexslt-api.xml: added
	  the generation of libexslt-api.xml
        * libexslt/exslt.h: small cleanup.

Wed Dec 11 18:45:09 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am doc/apibuild.py doc/libxslt-api.xml:
	  copied over the apibuild.py from libxml2, adapted a bit and
	  regenerated the API description in XML. Todo: libexslt-api.xml
	* libxslt/attributes.c libxslt/documents.c libxslt/extensions.c
	  libxslt/imports.c libxslt/numbers.c libxslt/numbersInternals.h
	  libxslt/pattern.c libxslt/preproc.c libxslt/security.c
	  libxslt/templates.c libxslt/transform.c libxslt/transform.h
	  libxslt/variables.c libxslt/xslt.c libxslt/xsltInternals.h
	  libxslt/xsltutils.c libxslt/xsltutils.h: cleanup based on the
	  report from the scripts.